fix tweet 'view more' button alignment when unauth

--- a/public/src/scss/elements/_tweet.scss
+++ b/public/src/scss/elements/_tweet.scss
@@ -219,7 +219,7 @@
     }
     p {
       display:inline-block;
-      margin-top:7px;
+      margin-top:9px;
     }
 
     button {
